<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
    android:id="@+id/main"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/radio_group_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp">
        <!-- Opción 1: Pendiente (usando MaterialRadioButton) -->
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_pending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state_pending"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"
            android:paddingStart="8dp"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"/>

        <!-- Opción 2: En Progreso -->
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_in_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state_inprogress"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"
            android:paddingStart="8dp"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"/>

        <!-- Opción 3: Hecho -->
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state_done"
            android:textSize="18sp"
            android:paddingStart="8dp"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"/>
    </RadioGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnSurfaceInverse"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="10dp"
        android:paddingVertical="15dp"
        android:text="@string/btn_save"
        android:textSize="18sp"/>



</LinearLayout>