<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    tools:context=".SetupActivity">
    <TextView
        android:id="@+id/tv_welcome_title"
        style="@style/TextAppearance.Material3.HeadlineSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:text="¡Bienvenido, Jorge!" />

    <TextView
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/setup_description"
        android:textColor="?attr/colorOnSurfaceVariant" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_board"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:icon="@drawable/ic_add"
        android:paddingVertical="15dp"
        android:text="@string/btn_new_board" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_join_board"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/btn_join_board" />

</LinearLayout>